--- a/style/style.css
+++ b/style/style.css
@@ -11,9 +11,9 @@ html {
 body {
   background-color: #faaca8;
   background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
-  background-position: center center;
   background-attachment: fixed;
-  height: 100vh;
+  height: fit-content;
+  width: fit-content;
 }
 header {
   height: 5rem;
@@ -55,13 +55,16 @@ a:hover,
 
 main {
   text-align: center;
-  padding-bottom: 4rem;
-  padding-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 10rem 3rem;
 }
 
 section {
   padding: 2rem 0rem;
   background-image: url(../images/fondo_blanco.jpg);
+  padding: 2rem 3rem 4rem;
 }
 
 h2,
@@ -70,9 +73,9 @@ h3 {
   text-transform: capitalize;
 }
 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: bold;
-  word-spacing: 0.3;
+  letter-spacing: 0.2rem;
 }
 
 h3 {
@@ -89,12 +92,29 @@ p {
   word-spacing: 0.4rem;
   letter-spacing: 0.3rem;
 }
-img.de_perfil {
-  border-style: solid;
-  border-radius: 0.9rem;
-  border-color: white;
-  border-width: 1rem;
-  box-shadow: 28px 4px 32px 23px rgba(0, 0, 0, 0.1);
+.imagen_y_parrafo {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.parrafo_central {
+  width: 65vw;
+  font-size: 2rem;
+}
+.figure_de_perfil {
+  border: solid white 1.7rem;
+}
+.h2 {
+  align-self: center;
+  padding-bottom: 1rem;
+  padding-top: 2rem;
+}
+
+.img_de_perfil {
+  width: 27rem;
+  border: transparent;
 }
 footer {
   text-align: center;
