--- a/style/style.css
+++ b/style/style.css
@@ -50,7 +50,6 @@ a:hover,
 .active {
   color: white;
   font-style: italic;
-  font-size: 2.2rem;
 }
 
 main {
@@ -75,7 +74,6 @@ h3 {
 h2 {
   font-size: 4rem;
   font-weight: bold;
-  letter-spacing: 0.2rem;
 }
 
 h3 {
@@ -90,7 +88,6 @@ p {
   text-align: justify;
   line-height: 3rem;
   word-spacing: 0.4rem;
-  letter-spacing: 0.3rem;
 }
 .imagen_y_parrafo {
   display: flex;
@@ -102,6 +99,9 @@ p {
 .parrafo_central {
   width: 65vw;
   font-size: 2rem;
+}
+.parrafo_section {
+  padding: 2rem 0rem;
 }
 .figure_de_perfil {
   border: solid white 1.7rem;
