--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-  background-color: #2f3330;
-  background-image: linear-gradient(19deg, #2f3330 0%, #ddd6f3 100%);
+  background-color: #6e7985;
+  /*background-image: linear-gradient(19deg, #2f3330 0%, #ddd6f3 100%);*/
   background-attachment: fixed;
   height: fit-content;
   width: fit-content;
@@ -35,7 +35,7 @@ h1 {
   font-family: "Josefin Sans", sans-serif;
   font-size: 3rem;
   font-weight: bolder;
-  color: #d3e6da;
+  color: #f8f9fa;
 }
 
 a {
@@ -44,15 +44,18 @@ a {
   font-size: 2rem;
   padding: 0rem 0.4rem;
   list-style: none;
-  color: #d3e6da;
+  color: #f8f9fa;
   border: transparent;
 }
-a:hover,
 .active {
-  color: white;
+  color: #f8f9fa;
+  border-left: solid #f8f9fa 0.1rem;
+  border-right: solid #f8f9fa 0.1rem;
   font-style: italic;
 }
-
+a:hover {
+  font-style: italic;
+}
 main {
   text-align: center;
   display: flex;
@@ -74,7 +77,7 @@ h3 {
 }
 h2 {
   font-size: 5rem;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 h3 {
@@ -106,13 +109,10 @@ p {
   padding: 2rem 0rem;
 }
 .figure_de_perfil {
-  border: solid #d3e6da 1rem;
-  border-radius: 3rem;
+  border: solid #f8f9fa 0.8rem;
 }
-/* se agrega border radius para ambas clases, para evitar que la esquina inferios izquierda de la imagen no se superponga sobre el borde establecido en la clase figure_de_perfil */
 .img_de_perfil {
   width: 27rem;
-  border-radius: 3rem;
 }
 .h2 {
   align-self: center;
