--- a/style/style.css
+++ b/style/style.css
@@ -93,23 +93,26 @@ p {
 .imagen_y_parrafo {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
 .parrafo_central {
+  order: 2;
   width: 65vw;
   font-size: 2rem;
   font-weight: 1000;
 }
-.parrafo_section {
-  padding: 2rem 0rem;
-}
 .figure_de_perfil {
+  order: 1;
   border: solid 0.8rem;
   border-image-source: linear-gradient(45deg, #f8f9faab, #0a0b0a);
   border-image-slice: 5;
 }
+.parrafo_section {
+  padding: 2rem 0rem;
+}
+
 .img_de_perfil {
   width: 27rem;
 }
