--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,7 @@ header {
 ul {
   display: flex;
   flex-flow: row wrap;
+  list-style: none;
 }
 
 a {
@@ -46,12 +47,10 @@ h1 a {
   font-weight: bolder;
   color: #f8f9fa;
 }
-.active {
-  color: #f8f9fa;
-  border-bottom: solid #f8f9fa;
-}
-li a:hover {
-  font-style: italic;
+
+nav ul li a:hover {
+  background-color: #f8f9fa;
+  color: #0a0b0a;
 }
 main {
   text-align: center;
